--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,12 +15,12 @@ jobs:
 
       - name: Set up SSH key
         run: |
-          echo "${{ secrets.PRIVATE_KEY }}" > private_key
-          chmod 600 private_key
+          echo "${{ secrets.PRIVATE_KEY }}" > private_key.pem
+          chmod 600 private_key.pem
 
       - name: Deploy via SSH
         run: |
-          ssh -t -o StrictHostKeyChecking=no -i private_key ${{ secrets.USERNAME }}@${{ secrets.HOST }} << 'EOF'
+          ssh -t -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.USERNAME }}@${{ secrets.HOST }} << 'EOF'
             docker pull parasgupta283/yii2-app:latest
             docker service update --image parasgupta283/yii2-app:latest yii2-web || \
             docker service create --name yii2-web -p 8080:80 parasgupta283/yii2-app:latest
