--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,17 @@
-version: '3.8'
+version: '2.4'
 
 services:
   yii2-web:
     image: parasgupta283/yii2-app:latest
-    ports:
-      - "8080:80"
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost"]
       interval: 30s
-      timeout: 10s
+      timeout: 5s
       retries: 3
+    networks:
+      - internal
+
+networks:
+  internal:
+    driver: bridge
