--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -5,3 +5,6 @@ scrape_configs:
   - job_name: 'node-exporter'
     static_configs:
       - targets: ['172.31.84.205:9100']
+  - job_name: 'nginx'
+    static_configs:
+      - targets: ['172.31.84.205:9113']
